<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/event_cart"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp"
    android:visibility="visible"
    card_view:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">


        <TextView
            android:id="@+id/event_fill"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/montserrat_regular"
            android:padding="3dp"
            android:text="@string/name_fill"
            android:textSize="14sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/photos_event"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/photos_event"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:src="@android:color/holo_blue_bright"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="@id/event_fill"
            card_view:layout_constraintVertical_bias="0.528" />


        <TextView
            android:id="@+id/sumary_fill"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/sumary_fill"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/event_fill"
            app:layout_constraintStart_toStartOf="@+id/event_fill"
            app:layout_constraintTop_toBottomOf="@+id/event_fill" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/category"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/sumary_fill"
            app:layout_constraintTop_toBottomOf="@+id/sumary_fill" />

        <TextView
            android:id="@+id/category_fill"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/roboto_lightitalic"
            android:text="@string/category_fill"
            android:textSize="12sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="@+id/sumary_fill"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            app:layout_constraintTop_toTopOf="@+id/textView6" />

        <Button
            android:id="@+id/move_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/button_detail"
            android:textSize="10sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/category_fill"
            app:layout_constraintTop_toBottomOf="@+id/category_fill" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
