<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".ui.detail.DetailEventActivity">

        <ImageView
            android:id="@+id/picture_event"
            android:layout_width="0dp"
            android:layout_height="350dp"
            android:contentDescription="@string/event_picture"
            android:scaleType="centerCrop"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/love_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:backgroundTint="@color/float_button"
            app:borderWidth="0dp"
            android:layout_margin="16dp"
            android:contentDescription="Add"
            android:src="@drawable/not_love"
            app:layout_constraintBottom_toBottomOf="@+id/picture_event"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/picture_event" />


        <TextView
            android:id="@+id/judul_event"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/roboto_bold"
            android:text="Belajar bahasa python untuk pemula"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/picture_event" />

        <TextView
            android:id="@+id/colaborator"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/roboto_light"
            android:text="@string/owner_event"
            android:textAlignment="center"
            android:textSize="14sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="@+id/judul_event"
            app:layout_constraintStart_toStartOf="@+id/judul_event"
            app:layout_constraintTop_toBottomOf="@+id/judul_event" />


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/event_available_24px"
            app:layout_constraintStart_toStartOf="@+id/colaborator"
            app:layout_constraintTop_toBottomOf="@+id/colaborator" />

        <TextView
            android:id="@+id/date_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/start_event"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/kuota"
            app:layout_constraintTop_toTopOf="@+id/imageView2" />

        <ImageView
            android:id="@+id/end_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:src="@drawable/event_busy_24px"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <TextView
            android:id="@+id/date_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/kuota"
            app:layout_constraintTop_toTopOf="@+id/end_event" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/kuota"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/end_event"
            app:layout_constraintTop_toBottomOf="@+id/end_event" />

        <TextView
            android:id="@+id/kuota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="0"
            app:layout_constraintBottom_toBottomOf="@+id/textView7"
            app:layout_constraintStart_toEndOf="@+id/textView7"
            app:layout_constraintTop_toTopOf="@+id/textView7" />


        <ImageView
            android:layout_width="wrap_content"
            android:id="@+id/imageView3"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:src="@drawable/location_on_24px"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/placement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="12sp"
            android:text="hallo hallo"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            app:layout_constraintStart_toStartOf="@+id/date_start"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateOnly="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.542"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.477" />

        <TextView
            android:id="@+id/decription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="@+id/picture_event"
            app:layout_constraintStart_toStartOf="@+id/picture_event"
            app:layout_constraintTop_toBottomOf="@+id/placement" />

        <Button
            android:id="@+id/link_event"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/blue_crom"
            android:text="Register"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/decription"
            app:layout_constraintStart_toStartOf="@+id/decription"
            app:layout_constraintTop_toBottomOf="@+id/decription" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
